# ontology-grounded-rag

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
01-mandala/: README.md  pyproject.toml
01-mandala/src/: 02-filter.py  04-claude.py  05-insert-graph.py  06-embed-section.py  07-query.py  10-neo4j-sample.py
01-mandara-rag/: README.md
01-mandara-rag/scripts/: 01-crawl-mandala.sh
01-mandara-rag/src/: 01-crawl-site.py  03-extract-HA.py  04-claude.py  05-insert-graph.py  06-embed-section.py  07-query.py  10-extract-mandala.py  99-neo4j-sample.py  common.py
02-mandara-with-ontology/: README.md  pyproject.toml
02-mandara-with-ontology/src/: 01-extract-mandala.py  02-insert-ontology-graph.py  03-insert-graph.py  04-copy-embeddings.py  05-annotate-ontology.py  05-query.py  06-export-ontology-annotations.py  10-query.py  common.py
03-fuse/: README.md  pyproject.toml
03-fuse/assets/3_sample_data/1. 設計変更依頼書（ECR）/: ECR-2026-018_設計変更依頼書.docx
03-fuse/assets/3_sample_data/3. 設計諸元表（仕様書）/: DS-RG50-01_設計諸元表.xlsx
03-fuse/assets/3_sample_data/4.  設計審査議事録（設計レビュー-DR）/: DR-50-03_設計審査議事録.docx
03-fuse/assets/3_sample_data/5. 不具合対策書（8D等）/: QR-2022-114_不具合対策書.docx
03-fuse/assets/3_sample_data/6. 技術メモ（ベテラン知見）/: TM-2021-007_技術メモ.docx
03-fuse/assets/3_sample_data/7. 強度計算書・耐久試験報告書/: CALC-RG50-021_強度計算書.xlsx  TR-2022-039_耐久試験報告書.docx
03-fuse/src/: 01-build-graph.py
doc/: README.md  site-overview.md  vocabulary.md
doc/etc/: ltc_cause_tree.html
scripts/: migrate-neo4j.sh  start-lmstudio.sh  start-neo4j-exp03.sh  start-neo4j.sh
(+7 files in other folders)
